fix: changed the font to a more readable one and change console log

--- a/hangman/assets/styles/scss/main.scss
+++ b/hangman/assets/styles/scss/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Island+Moments&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Annie+Use+Your+Telescope&display=swap");
 @import url("fonts.css");
 @import url("variablles.css");
 @import url("illustration.css");
@@ -8,7 +9,7 @@
 
 .page {
   background: url(./../../../assets/images/main-bg.jpg);
-  font-family: Island Moments;
+  font-family: "Annie Use Your Telescope", cursive; //Island Moments, cursive;;
   color: var(--color-pen);
   position: relative;
 }
